FIxed alignment for Error page

--- a/Website/CSS/style.css
+++ b/Website/CSS/style.css
@@ -301,7 +301,7 @@ h6 {
     display: flex;
     align-items: center;
     justify-content: flex-start;
-    max-width: 90%;
+    max-width: 70%;
     margin: 0 auto;
 }
 
